@@ -1,5 +1,8 @@
 Release Notes
 
+* 10/17/2016
+  * allowing cancelled jobs to register log files
+
 * 10/15/2016
   * eventStatus=fatal
 
